[fix] (ABC-425): Fixed issue with truncate in primitive visual picker title

--- a/src/modules/base/primitiveVisualPickerTitle/primitiveVisualPickerTitle.css
+++ b/src/modules/base/primitiveVisualPickerTitle/primitiveVisualPickerTitle.css
@@ -30,20 +30,36 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
+.avonni-visual-picker__figure-content_small {
+    width: 8rem;
+}
+
+.avonni-visual-picker__figure-content_medium {
+    width: 12rem;
+}
+
+.avonni-visual-picker__figure-content_large {
+    width: 15rem;
+}
+
+.avonni-visual-picker__figure-content_x-large {
+    width: 18rem;
+}
+
+.avonni-visual-picker__figure-content_xx-large {
+    width: 21rem;
+}
+
+.avonni-visual-picker__figure-content_xx-large {
+    width: 100%;
+}
+
 .avonni-visual-picker__figure-title {
     color: var(--avonni-visual-picker-figure-title-text-color, #080707);
     font-style: var(--avonni-visual-picker-figure-title-font-style, normal);
     font-weight: var(--avonni-visual-picker-figure-title-font-weight, 400);
     font-size: var(--avonni-visual-picker-figure-title-font-size, 1.5rem);
     line-height: var(--lwc-lineHeightHeading, 1.25);
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    align-self: center;
-}
-
-.avonni-visual-picker__figure-title_small {
-    font-weight: var(--avonni-visual-picker-figure-title-font-weight, 300);
-    font-size: var(--avonni-visual-picker-figure-title-font-size, 1.125rem);
 }
 
 .avonni-primitive-visual-picker-title__icon {
